[gd_scene load_steps=6 format=3 uid="uid://ly3tkljwfa8m"]

[ext_resource type="PackedScene" uid="uid://beqhq1817oav7" path="res://demo_2d/wall/wall.tscn" id="1_orey4"]
[ext_resource type="Script" uid="uid://ixphgyc2vqpk" path="res://demo_2d/demo_scene/demo_scene_2d.gd" id="1_s3u83"]
[ext_resource type="PackedScene" uid="uid://dcidp3ukia16q" path="res://demo_2d/turret/turret_2d.tscn" id="2_kwcv7"]
[ext_resource type="PackedScene" uid="uid://c561j8bdsy66w" path="res://demo_2d/player/player_2d.tscn" id="3_e1cyj"]
[ext_resource type="Script" uid="uid://tlh53obxgwso" path="res://demo_2d/demo_scene/menu.gd" id="5_kwcv7"]

[node name="DemoScene2D" type="Node2D"]
script = ExtResource("1_s3u83")

[node name="Walls" type="Node2D" parent="."]

[node name="ButtomWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, 1296)

[node name="RightWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(2304, 0)
rotation = -1.5708

[node name="TopWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, -1296)
rotation = 3.14159

[node name="LeftWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(-2304, 0)
rotation = 1.5708

[node name="Player2D" parent="." instance=ExtResource("3_e1cyj")]
unique_name_in_owner = true
position = Vector2(0, 100)

[node name="Turret2D" parent="." instance=ExtResource("2_kwcv7")]
unique_name_in_owner = true
position = Vector2(500, 0)

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource("5_kwcv7")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player speed"
horizontal_alignment = 1

[node name="PlayerSpeed" type="VSlider" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 1
max_value = 500.0
value = 100.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Player
accelerate vector"
horizontal_alignment = 1

[node name="PlayerAccelerateVectorX" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "X"

[node name="PlayerAccelerateVectorY" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "Y"

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Bullet speed"

[node name="BulletSpeed" type="VSlider" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 1
min_value = 10.0
max_value = 1000.0
value = 200.0

[node name="VBoxContainer4" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Bullet
accelerate vector"
horizontal_alignment = 1

[node name="BulletAccelerateVectorX" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
placeholder_text = "X"

[node name="BulletAccelerateVectorY" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
placeholder_text = "Y"

[node name="ShowHideUi" type="Button" parent="Menu/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Show / Hide"

[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PlayerSpeed" to="." method="_on_player_speed_value_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorX" to="." method="_on_player_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorY" to="." method="_on_player_accelerate_vector_y_text_changed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BulletSpeed" to="Turret2D" method="_on_bullet_speed_value_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/BulletAccelerateVectorX" to="Turret2D" method="_on_bullet_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/BulletAccelerateVectorY" to="Turret2D" method="_on_bullet_accelerate_vector_y_text_changed"]
[connection signal="pressed" from="Menu/MarginContainer/ShowHideUi" to="Menu" method="_on_show_hide_ui_pressed"]
